# wrtn_crawl_linux

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install_chromedriver.sh  pipeline.py  pipeline_multi.py  pipeline_multi_at_window.py  pyproject.toml
final_output/: char_cat(10).csv  char_info(10).csv
ipy_for_test/: crawl_test.ipynb  crawl_test_at_linux.ipynb  img_to_db.ipynb  sql_test.ipynb
